# multi

ur5e_dual_arm1/: CMakeLists.txt  dual_arm_plugin.xml
ur5e_dual_arm1/config/: ros2_controllers.yaml
ur5e_dual_arm1/include/ur5e_dual_arm/: dual_arm_impedance_controller.hpp
ur5e_dual_arm1/launch/: dual_arm.launch.py  full.launch.py
ur5e_dual_arm1/src/: dual_arm_impedance_controller.cpp
ur5e_dual_arm1/src/scripts/: data_logger.py  task_executor.py
ur5e_dual_arm1/urdf/: intel_rgbd_cam_d435.urdf.xacro
ur5e_dual_arm1/worlds/: grasp_world.world
ur5e_impulse_control/: CMakeLists.txt  package.xml
ur5e_impulse_control/config/: aic_params.yaml  ros2_controllers.yaml  ur5e.urdf
ur5e_impulse_control/launch/: ur5e.launch.py
ur5e_impulse_control/scripts/: controller_node.py  injector_node.py  monitor_node.py
